# kutinf-beadand-

./: 2017.18.01.xlsx  CMakeLists.txt  doksi.docx  indat.txt  jegyzőkönyv.docx  kutinfbead.cpp  kutinfbeadv2.cpp  plot.plt  veldis.txt
